--- a/openstack_controller/templates/base/_tempest_blacklist_no_supported.yaml
+++ b/openstack_controller/templates/base/_tempest_blacklist_no_supported.yaml
@@ -114,3 +114,7 @@
             # TODO: PRODX-28093 run full multi-tenancy tests for Ironic to fully cover network isolation tests
             - (?:ironic_tempest_plugin.tests.scenario.test_baremetal_single_tenant.BaremetalSingleTenant)
             - (?:ironic_tempest_plugin.tests.scenario.test_baremetal_multitenancy.BaremetalMultitenancy)
+
+            # WATCHER
+            # Skip tests watcher client functionality, don't check clients in tempest tests
+            - (?:watcher_tempest_plugin.tests.client_functional)
