Allow for unauthenticated Nova API version discovery
this possibility is in nova since Ussuri release, but our defaults
of OpenStack-Helm are not aware of that and are still targeting ~Ocata.

This change adds the same changes to api-paste.ini as
https://review.opendev.org/c/openstack/nova/+/685181 did, given that
the corresponding code changes are already in place.

Closes-Issue: PRODX-32980
Change-Id: Ic22c9d9dcec8b3b3ade6db4500e3ca4a557be241

--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_adv.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_adv.yaml
@@ -101,6 +101,18 @@ spec:
             level: INFO
           logger_os.brick:
             level: INFO
+        paste:
+          composite:osapi_compute:
+            /v2: oscomputeversion_legacy_v2
+            /v2.1: oscomputeversion_v2
+            /v2/+: openstack_compute_api_v21_legacy_v2_compatible
+            /v2.1/+: openstack_compute_api_v21
+          pipeline:oscomputeversion_v2:
+            pipeline: cors compute_req_id faultwrap http_proxy_to_wsgi oscomputeversionapp_v2
+          pipeline:oscomputeversion_legacy_v2:
+            pipeline: cors compute_req_id faultwrap http_proxy_to_wsgi legacy_v2_compatible oscomputeversionapp_v2
+          app:oscomputeversionapp_v2:
+            paste.app_factory: nova.api.openstack.compute.versions:VersionsV2.factory
         nova:
           DEFAULT:
             initial_cpu_allocation_ratio: 8.0
