Do not configure coordination in Designate before Victoria release
Related-Prod: PRODX-3456
Change-Id: Iec9d7eb83fb07d58b70cbf07fa3f19f2684dfd00

--- a/openstack_controller/templates/services/dns.yaml
+++ b/openstack_controller/templates/services/dns.yaml
@@ -130,8 +130,10 @@ spec:
 {%- endif %}
           oslo_messaging_notifications:
             topics: {{ notification_topics|join(',') }}
+      {%- if spec.openstack_version not in ["queens", "rocky", "stein", "train", "ussuri"] %}
           coordination:
             backend_url: {{ get_etcd3_endpoint(spec.openstack_version, 'etcd3gw') }}
+      {%- endif %}
         logging:
           logger_designate:
             level: {{ designate_log_level }}
