--- a/tests/fixtures/render_service_template/output/dns/yoga_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/dns/yoga_ceph_local_non_dvr.yaml
@@ -6,15 +6,19 @@ spec:
       conf:
         policy.d:
           01-controller-default.yaml: {'dns_rule1': 'dns_value1'}
-          02-custom.yaml:
-            designate_custom: value
+          02-custom.yaml: {}
         powerdns:
           zone-cache-refresh-interval: 120
+        software:
+          apache2:
+            enabled: True
         designate:
           keystone_authtoken:
             memcache_secret_key: zdLlg6VAsGH6E7tX
             memcache_security_strategy: ENCRYPT
             service_type: dns
+          coordination:
+            backend_url: etcd3+http://etcd:2379?api_version=auto
           audit_middleware_notifications:
             driver: noop
           oslo_messaging_notifications:
