Adding multiattach volume type in cinder
The patch adds multiattach volume type in cider if backend is
Ceph and sets this backend into tempest config.

Related-PRODX: PRODX-33624
Change-Id: I972f02e9c507d5498157d2af3dc5a5252ef66cb5

--- a/openstack_controller/templates/services/block-storage.yaml
+++ b/openstack_controller/templates/services/block-storage.yaml
@@ -324,6 +324,9 @@ spec:
 {%- for backend in enabled_backends %}
           {{ backend }}:
             volume_backend_name: {{ backend }}
+          {{ backend }}_multiattach:
+            volume_backend_name: {{ backend }}
+            multiattach: "\"<is> True\""
 {%- endfor %}
 {%- for label, override in node_specific.items() %}
   {%- set cinder_override = override.get("cinder", {}) %}
