--- a/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr_barbican_integration.yaml
+++ b/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr_barbican_integration.yaml
@@ -8,6 +8,9 @@ spec:
         volume_types:
           volumes-hdd:
             volume_backend_name: volumes-hdd
+          volumes-hdd_multiattach:
+            multiattach: '"<is> True"'
+            volume_backend_name: volumes-hdd
       ceph_client:
         configmap: rook-ceph-config
         user_secret_name: cinder-rbd-keyring
