[osctl] Collect nova/neutron metadata only for specified hosts
* Switch osctl to treads as processes has issue with
  kubernetes api client which we initialize in main
  tread, as result it is copied to all process task.
  The native threads do not block each other.

Related-Prod: PRODX-33821
Change-Id: I3cc28b8cfa31b5f7c270eba2c07dd0f8a5526e8b

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,9 @@ basepython = python3.8
 usedevelop = True
 install_command = bash {toxinidir}/tox_install.sh {opts} {packages}
 allowlist_externals =
+    find
+    bash
+    kubectl
     bash
 deps =
     .[test]
