Adding multiattach volume type for LVM
The patch adds multiattach volume type in cider if backend is
LVM.

Related-PRODX: PRODX-33624
Change-Id: I374ef44c6f0c07adf291dacbfd211fc8f69237da

--- a/openstack_controller/templates/services/block-storage.yaml
+++ b/openstack_controller/templates/services/block-storage.yaml
@@ -334,6 +334,11 @@ spec:
       {%- for backend_name,backend_opts in cinder_override.get("volume", {}).get("backends", {}).items() %}
           {{ backend_name }}:
             volume_backend_name: {{ backend_name }}
+        {%- if "lvm" in backend_opts %}
+          {{ backend_name }}_multiattach:
+            volume_backend_name: {{ backend_name }}
+            multiattach: "\"<is> True\""
+        {%- endif %}
       {%- endfor %}
     {%- endif %}
 {%- endfor %}
