Do not drop cinder default volume type before victoria
Related-Prod: PRODX-33948
Change-Id: I44425522fe56a884ec6b9f4f095f2929d671e4c9

--- a/openstack_controller/templates/services/block-storage.yaml
+++ b/openstack_controller/templates/services/block-storage.yaml
@@ -347,7 +347,9 @@ spec:
 {%- endif %}
       manifests:
         cron_job_db_purge: true
+        {%- if spec.openstack_version not in ['queens', 'rocky', 'stein', 'train', 'ussuri'] %}
         job_drop_default_volume_type: true
+        {%- endif %}
         network_policy: false
         job_rabbit_init: false
         job_storage_init: false
