Fix typos in controller config option description
Related-Prod: PRODX-3456
Change-Id: Icb5f0e106ffa96ed995dd3751710c144bc174ab0

--- a/etc/openstack-controller/01-controller-default.ini
+++ b/etc/openstack-controller/01-controller-default.ini
@@ -40,7 +40,7 @@ nwl_parallel_max_compute = 30
 # max number of gateway nodes we allow to update in parallel
 nwl_parallel_max_gateway = 1
 
-# respect nova AZs, when set to true parammem update is allowed only for computes in same AZ
+# respect nova AZs, when set to true parallel update is allowed only for computes in same AZ
 respect_nova_az = True
 
 # flag to skip instance check on host before proceeding with node removal. By default is False
@@ -49,4 +49,5 @@ ndr_skip_instance_check = False
 
 # flag to skip volume check on host before proceeding with node removal. By default is False
 # which means that node removal will be blocked unless at least 1 volume exists on host.
+# Volume is tied to specific host only for LVM backend.
 ndr_skip_volume_check = False
