--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ setenv =
     SETUPTOOLS_ENABLE_FEATURES="legacy-editable"
     NODE_IP="127.0.0.1"
 commands =
-    pytest {posargs:tests -vv -n auto}
+    pytest {posargs:tests openstack_controller/osctl/tests/unit -vv -n auto}
 
 [testenv:coverage]
 commands =
