--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -35,7 +35,8 @@ properties:
       - victoria # LTS version
       - wallaby # not supported, only for migration
       - xena # not supported, only for migration
-      - yoga # not supported
+      - yoga # LTS version
+      - antelope # not supported
       - master # not supported, only for example
   preset:
     description: Preset of features to deploy
