Enable TLS-proxy by default
Related-Prod: PRODX-34171
Change-Id: Idf0ca5c0572d14aab034eb69953b6b581e4ea881

--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -560,6 +560,7 @@ properties:
                 type: boolean
                 description: |
                   Enable FIPS compliant TLS proxy for public endpoints.
+                  Default: true
           public_endpoints:
             type: object
             additionalProperties: false
