Rework clouds.yaml initialization
Mount clouds.yaml from secret to have ability update it on runtime.
Add logic to copy/update secret from openstack namespace to osh-system

Related-Prod: PRODX-34252
Change-Id: If10c2baf26b7b7c09e52acb2725475ddc4b89d41

--- a/charts/openstack-operator/templates/exporter.yaml
+++ b/charts/openstack-operator/templates/exporter.yaml
@@ -96,7 +96,9 @@ spec:
               mountPath: /etc/openstack-controller/exporter
       volumes:
         - name: os-clouds
-          emptyDir: {}
+          secret:
+            secretName: keystone-os-clouds
+            defaultMode: 365
         - name: exporter-etc
           secret:
             secretName: {{ include "openstack-controller.fullname" . }}-exporter-etc
