--- a/charts/openstack-operator/templates/job-ensure-resources.yaml
+++ b/charts/openstack-operator/templates/job-ensure-resources.yaml
@@ -43,6 +43,9 @@ rules:
   - apiGroups: [""]
     resources: [configmaps]
     verbs: [get, create]
+  - apiGroups: [""]
+    resources: [secrets]
+    verbs: [get, create]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
