Remove deploy openstack-iscsi chart for Cinder with LVM backend
By default we use TGTd for creatin iSCSI targets for Cinder volumes
with LVM. This service can cause exported volumes to use duplicate WWNs.
The Linux-IO does not have these problems when working with exported
volumes so we begin use lioadm as target helper. It doesn't need
openstack-iscsi to work.

Related-Prod: PRODX-34069
Change-Id: I046310226ebb92df8921552a548b062d4afa19c8

--- a/openstack_controller/templates/services/block-storage.yaml
+++ b/openstack_controller/templates/services/block-storage.yaml
@@ -92,24 +92,6 @@ spec:
           rabbit_exporters: "overview,exchange,node"
   {%- endif %}
 {%- endif %}
-{%- if overrides.enabled %}
-  - name: openstack-iscsi
-    chart: {{spec.common.infra.repo}}/iscsi
-    values:
-      images:
-        tags:
-{%- for image in [
-    "dep_check",
-    "iscsi_iscsi",
-    "iscsi_tgt",] %}
-        {%- if image in images %}
-          {{ image }}: {{ images[image] }}
-        {%- endif %}
-{%- endfor %}
-      manifests:
-        daemonset_tgt: true
-        daemonset_iscsi: false
-{%- endif %}
 {%- if spec.get('migration', {}).get('cinder', {}).get('deploy_main_service', True) %}
   - name: openstack-cinder
     chart: {{spec.common.openstack.repo}}/cinder
@@ -413,6 +395,9 @@ spec:
                          {%- for key,val in backend_opts.lvm.items() %}
                          {{ key }}: {{ val }}
                          {%- endfor %}
+                           {%- if "target_helper" not in backend_opts.lvm %}
+                         target_helper: lioadm
+                           {%- endif %}
                          {%- endif %}
                        DEFAULT:
                          enabled_backends: {{ ','.join(overriden_enabled_backends) }}
