--- a/tests/fixtures/render_service_template/output/block-storage/yoga_lvm_lvm_non_dvr_backup_nfs.yaml
+++ b/tests/fixtures/render_service_template/output/block-storage/yoga_lvm_lvm_non_dvr_backup_nfs.yaml
@@ -1,16 +1,5 @@
 spec:
   releases:
-  - chart: osh-infra/iscsi
-    name: openstack-iscsi
-    values:
-      images:
-        tags:
-          iscsi_iscsi: cinder-volume:latest
-          iscsi_tgt: cinder-volume:latest
-          dep_check: dep-check:latest
-      manifests:
-        daemonset_iscsi: false
-        daemonset_tgt: true
   - chart: osh/cinder
     name: openstack-cinder
     values:
@@ -30,11 +19,13 @@ spec:
                           volume_backend_name: lvm_fast
                           volume_group: fast-vol
                           volumes_dir: /var/lib/cinder/volumes
+                          target_helper: lioadm
                         lvm_slow:
                           volume_group: slow-vol
                           volume_driver: cinder.volume.drivers.lvm.LVMVolumeDriver
                           volume_backend_name: lvm_slow
                           volumes_dir: /var/lib/cinder/volumes
+                          target_helper: lioadm
                         DEFAULT:
                           allowed_direct_url_schemes: cinder
                           enabled_backends: lvm_fast,lvm_slow
