[exporter] Code improvements
* move functional tests to general folder
* do not call long running can_collect_data in main loop
* run exporter under uwsgi

Related-Prod: PRODX-3456
Change-Id: Ia7c6909c483e1585e8458debfcc6db505647c14a

--- a/charts/openstack-operator/templates/exporter.yaml
+++ b/charts/openstack-operator/templates/exporter.yaml
@@ -72,7 +72,7 @@ spec:
           image: {{ tuple . .Values.image | include "getImageUrl" }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command:
-            - osctl-exporter
+            {{- toYaml .Values.exporter.cmd | nindent 10 }}
           env:
             {{- range $optionName, $optionValue := .Values.exporter.settings.raw }}
             - name: {{ $optionName }}
