--- a/openstack_controller/templates/native/cache_images.yaml
+++ b/openstack_controller/templates/native/cache_images.yaml
@@ -7,3 +7,5 @@
 - neutron_openvswitch_agent
 - neutron_server
 - neutron_l3
+# PRODX-34488: for fast cold start we need to cache redis image
+- redis-failover
