Use http probe for exporter liveness
The patch adds liveness probe for exporter running 5 min by default
in order to do not spam openstack API as probe will call metrics polling.

Related-Prod: PRODX-3456
Change-Id: I972043c5789861ab45eaf0cf0a268e5add2d30b3

--- a/charts/openstack-operator/templates/exporter.yaml
+++ b/charts/openstack-operator/templates/exporter.yaml
@@ -79,11 +79,12 @@ spec:
               value: "{{ $optionValue }}"
             {{- end }}
           livenessProbe:
-            # NOTE(vsaienko): do tcp checks only to avoid starting polling functions.
-            tcpSocket:
+            httpGet:
+              path: /
               port: {{ .Values.exporter.settings.raw.OSCTL_EXPORTER_BIND_PORT }}
             {{- toYaml .Values.exporter.pod.liveness.params | nindent 12}}
           readinessProbe:
+            # NOTE(vsaienko): do tcp checks only to avoid starting polling functions.
             tcpSocket:
               port: {{ .Values.exporter.settings.raw.OSCTL_EXPORTER_BIND_PORT }}
             {{- toYaml .Values.exporter.pod.readiness.params | nindent 12}}
