--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_lvm_non_dvr_encryption.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_lvm_non_dvr_encryption.yaml
@@ -140,6 +140,9 @@ spec:
             driver: noop
           oslo_messaging_notifications:
             topics: notifications,stacklight_notifications
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
           service_user:
             send_service_user_token: true
           coordination:
