Pin oslo_policy enforce defaults for services to false
Since the releases Zed/Antelope, services enable the API policies
new defaults and scope by default.The Default value of config options
oslo_policy enforce_scope and enforce_new_defaults have been changed to True.

Related-Prod: PRODX-34723
Change-Id: Ida41fc528d5af985a1e483bb66a880ab81651711

--- a/openstack_controller/templates/services/alarming.yaml
+++ b/openstack_controller/templates/services/alarming.yaml
@@ -60,6 +60,7 @@ spec:
             {%- endif %}
           database:
             alarm_history_time_to_live: {{ aodh_db_cleanup.get('age', 1) * 86400 }}
+{% include 'base/_oslo_policy_enforce_defaults.yaml' %}
         logging:
           logger_aodh:
             level: {{ spec.get('features', {}).get('logging', {}).get('aodh', {}).get('level', 'INFO') }}
