--- a/openstack_controller/templates/services/baremetal.yaml
+++ b/openstack_controller/templates/services/baremetal.yaml
@@ -201,6 +201,7 @@ spec:
 {%- endif %}
           oslo_messaging_notifications:
             topics: {{ notification_topics|join(',') }}
+{% include 'base/_oslo_policy_enforce_defaults.yaml' %}
           conductor:
             automated_clean: true
           pxe:
