--- a/openstack_controller/templates/services/identity.yaml
+++ b/openstack_controller/templates/services/identity.yaml
@@ -145,6 +145,7 @@ spec:
             backend: oslo_cache.memcache_pool
           oslo_messaging_notifications:
             topics: {{ notification_topics|join(',') }}
+{% include 'base/_oslo_policy_enforce_defaults.yaml' %}
 {%- if spec.get("features", {}).get("policies", {}).get("strict_admin", {}).get('enabled') %}
           resource:
             admin_project_name: admin
