--- a/openstack_controller/templates/services/image.yaml
+++ b/openstack_controller/templates/services/image.yaml
@@ -295,6 +295,7 @@ spec:
 {%- endif %}
           oslo_messaging_notifications:
             topics: {{ notification_topics|join(',') }}
+{% include 'base/_oslo_policy_enforce_defaults.yaml' %}
           import_filtering_opts:
             # NOTE(ohryhorov): port 8801 has been added in testing purposes to upload images
             # "allowed_ports" value has to be inside square brackets.
