--- a/openstack_controller/templates/services/networking.yaml
+++ b/openstack_controller/templates/services/networking.yaml
@@ -793,6 +793,7 @@ spec:
           {%- endif %}
           oslo_messaging_notifications:
             topics: {{ notification_topics|join(',') }}
+{% include 'base/_oslo_policy_enforce_defaults.yaml' %}
           {%- if service_providers %}
           service_providers:
             service_provider:
