--- a/tests/fixtures/render_service_template/output/shared-file-system/yoga_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/shared-file-system/yoga_ceph_local_non_dvr.yaml
@@ -38,6 +38,9 @@ spec:
               noop
           oslo_messaging_notifications:
             topics: notifications,stacklight_notifications
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
         policy.d:
           01-controller-default.yaml:
             shared-file-system_rule1: shared-file-system_value1
