--- a/openstack_controller/templates/services/compute.yaml
+++ b/openstack_controller/templates/services/compute.yaml
@@ -841,11 +841,7 @@ spec:
 {%- endif %}
           oslo_messaging_notifications:
             topics: {{ notification_topics|join(',') }}
-          oslo_policy:
-          # NOTE: pin enforce defaults as this will affect customers, API.
-          # https://mirantis.jira.com/browse/PRODX-24123
-            enforce_new_defaults: false
-            enforce_scope: false
+{% include 'base/_oslo_policy_enforce_defaults.yaml' %}
           service_user:
             send_service_user_token: true
         {%- if vnc_tls_enabled %}
