--- a/tests/fixtures/render_service_template/output/alarming/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/alarming/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -36,6 +36,9 @@ spec:
             memcache_security_strategy: ENCRYPT
             memcache_secret_key: vaT1fSWMgCwFlXem
             service_type: alarming
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
         logging:
           logger_aodh:
             level: INFO
