--- a/tests/fixtures/render_service_template/output/baremetal/queens_ceph_local_non_dvr_ironic.yaml
+++ b/tests/fixtures/render_service_template/output/baremetal/queens_ceph_local_non_dvr_ironic.yaml
@@ -48,6 +48,9 @@ spec:
             provisioning_network: ironic-provisioning
           oslo_messaging_notifications:
             topics: notifications,stacklight_notifications
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
           pxe:
             pxe_append_params: nofb nomodeset vga=normal ipa-insecure=1 ipa-debug=1
             ipxe_timeout: 120
