--- a/tests/fixtures/render_service_template/output/block-storage/ussuri_glance_cinder_netapp_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/block-storage/ussuri_glance_cinder_netapp_non_dvr.yaml
@@ -84,6 +84,9 @@ spec:
             driver: noop
           oslo_messaging_notifications:
             topics: notifications,stacklight_notifications
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
           oslo_middleware:
             max_request_body_size: 114688
           service_user:
