--- a/tests/fixtures/render_service_template/output/dns/ussuri_ceph_local_non_dvr_policies.yaml
+++ b/tests/fixtures/render_service_template/output/dns/ussuri_ceph_local_non_dvr_policies.yaml
@@ -19,6 +19,9 @@ spec:
             driver: noop
           oslo_messaging_notifications:
             topics: notifications,stacklight_notifications
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
           service:api:
             enabled_extensions_admin: quotas
         logging:
