--- a/tests/fixtures/render_service_template/output/identity/ussuri_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/identity/ussuri_ceph_local_non_dvr.yaml
@@ -27,6 +27,9 @@ spec:
             backend: oslo_cache.memcache_pool
           oslo_messaging_notifications:
             topics: notifications,stacklight_notifications
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
           identity:
             driver: sql
             default_domain_id: default
