--- a/tests/fixtures/render_service_template/output/identity/ussuri_ceph_local_non_dvr_non_sl.yaml
+++ b/tests/fixtures/render_service_template/output/identity/ussuri_ceph_local_non_dvr_non_sl.yaml
@@ -27,6 +27,9 @@ spec:
             backend: oslo_cache.memcache_pool
           oslo_messaging_notifications:
             topics: notifications
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
           federation:
             # TODO: move this logic to keystone helm chart
             trusted_dashboard:
