--- a/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_non_sl.yaml
+++ b/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_non_sl.yaml
@@ -109,6 +109,9 @@ spec:
             driver: noop
           oslo_messaging_notifications:
             topics: notifications
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
           import_filtering_opts:
             allowed_ports: "[80,443,8801]"
         glance_registry:
