--- a/tests/fixtures/render_service_template/output/instance-ha/ussuri_ceph_local_non_dvr_policies.yaml
+++ b/tests/fixtures/render_service_template/output/instance-ha/ussuri_ceph_local_non_dvr_policies.yaml
@@ -19,6 +19,9 @@ spec:
             memcache_secret_key: 3vySYJq0rDZ32KGG
             memcache_security_strategy: ENCRYPT
             service_type: instance-ha
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
         logging:
           logger_masakari:
             level: INFO
