--- a/tests/fixtures/render_service_template/output/key-manager/ussuri_ceph_local_non_dvr_db_cleanup.yaml
+++ b/tests/fixtures/render_service_template/output/key-manager/ussuri_ceph_local_non_dvr_db_cleanup.yaml
@@ -25,6 +25,9 @@ spec:
           oslo_messaging_notifications:
             driver: messagingv2
             topics: notifications,stacklight_notifications
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
           secretstore:
             enable_multiple_secret_stores: true
             stores_lookup_suffix: software, vault
