--- a/tests/fixtures/render_service_template/output/load-balancer/yoga_ceph_local_tf_driver_tf.yaml
+++ b/tests/fixtures/render_service_template/output/load-balancer/yoga_ceph_local_tf_driver_tf.yaml
@@ -56,6 +56,9 @@ spec:
             endpoint_type: internalURL
           oslo_messaging_notifications:
             topics: notifications,stacklight_notifications
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
           service_auth:
             memcache_secret_key: cAZLeChP79lxHJ1Z
             memcache_security_strategy: ENCRYPT
