--- a/tests/fixtures/render_service_template/output/metric/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/metric/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -84,6 +84,9 @@ spec:
             service_type: metric
           indexer:
             driver: mysql
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
       dependencies:
         static:
           db_init:
