--- a/tests/fixtures/render_service_template/output/networking/ussuri_ceph_local_non_dvr_sriov.yaml
+++ b/tests/fixtures/render_service_template/output/networking/ussuri_ceph_local_non_dvr_sriov.yaml
@@ -219,6 +219,9 @@ spec:
             driver: noop
           oslo_messaging_notifications:
             topics: notifications,stacklight_notifications
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
           ironic:
             valid_interfaces: internal
         paste:
