--- a/tests/fixtures/render_service_template/output/networking/victoria_ceph_local_ovn_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/networking/victoria_ceph_local_ovn_non_dvr.yaml
@@ -303,6 +303,9 @@ spec:
             driver: noop
           oslo_messaging_notifications:
             topics: notifications,stacklight_notifications
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
           ovn:
             enable_distributed_floating_ip: False
           nova:
