--- a/tests/fixtures/render_service_template/output/networking/yoga_ceph_local_non_dvr_bgpvpn_vpnaas.yaml
+++ b/tests/fixtures/render_service_template/output/networking/yoga_ceph_local_non_dvr_bgpvpn_vpnaas.yaml
@@ -246,6 +246,9 @@ spec:
             driver: noop
           oslo_messaging_notifications:
             topics: notifications,stacklight_notifications
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
           service_providers:
             service_provider:
               type: multistring
