--- a/tests/fixtures/render_service_template/output/orchestration/ussuri_ceph_local_non_dvr_policies.yaml
+++ b/tests/fixtures/render_service_template/output/orchestration/ussuri_ceph_local_non_dvr_policies.yaml
@@ -21,6 +21,9 @@ spec:
             driver: noop
           oslo_messaging_notifications:
             topics: notifications,stacklight_notifications
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
         logging:
           logger_heat:
             level: INFO
