--- a/tests/fixtures/render_service_template/output/placement/ussuri_ceph_local_non_dvr_cadf.yaml
+++ b/tests/fixtures/render_service_template/output/placement/ussuri_ceph_local_non_dvr_cadf.yaml
@@ -17,6 +17,9 @@ spec:
             enabled: true
           oslo_messaging_notifications:
             topics: notifications,stacklight_notifications
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
           keystone_authtoken:
             memcache_secret_key: 0NZmrV1NcBFwzDmv
             memcache_security_strategy: ENCRYPT
