--- a/tests/fixtures/render_service_template/output/placement/ussuri_ceph_local_non_dvr_policies.yaml
+++ b/tests/fixtures/render_service_template/output/placement/ussuri_ceph_local_non_dvr_policies.yaml
@@ -16,6 +16,9 @@ spec:
             driver: noop
           oslo_messaging_notifications:
             topics: notifications,stacklight_notifications
+          oslo_policy:
+            enforce_new_defaults: false
+            enforce_scope: false
           keystone_authtoken:
             memcache_secret_key: 0NZmrV1NcBFwzDmv
             memcache_security_strategy: ENCRYPT
