--- a/openstack_controller/templates/services/networking.yaml
+++ b/openstack_controller/templates/services/networking.yaml
@@ -687,7 +687,11 @@ spec:
         server:
           ingress:
             annotations:
+            {%- if 'baremetal' in spec.features.services %}
+              nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
+            {%- else %}
               nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
+            {%- endif %}
         core_plugin: {{ core_plugin }}
       {%- if spec.get('features', {}).get('neutron', {}).get('tunnel_interface') %}
         interface:
