Always specify rbd_secret_uuid for cinder
Since [0] cinder passing random rbd_secret_uuid by default
Make sure it is configured according to nova keyring settings.

[0] https://github.com/openstack/cinder/commit/6464d37d1661f5dfd58edec399a8e7e39c757b03

Related-Prod: PRODX-34790
Change-Id: I6aae84c1d05f40ea3c8c486e8cba636a5922c230

--- a/openstack_controller/templates/services/block-storage.yaml
+++ b/openstack_controller/templates/services/block-storage.yaml
@@ -284,6 +284,9 @@ spec:
             # NOTE(vsaienko): Use dedicated pool for cinder only, this will allow to improve
             # scale characteristics
             rbd_exclusive_cinder_pool: true
+            # NOTE(vsaienko): always specify rbd_secret_uuid as since Antelope this is set
+            # by default on cinder cide. Should be matched with values in nova/cinder keyrings
+            rbd_secret_uuid: c9543a17-411c-45e1-8a25-3f03e0090dc2
           # Needed for InstanceLocalityFilter
           nova:
             auth_section: keystone_authtoken
