--- a/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -72,6 +72,7 @@ spec:
             send_service_user_token: true
           backend_defaults:
             rbd_exclusive_cinder_pool: true
+            rbd_secret_uuid: c9543a17-411c-45e1-8a25-3f03e0090dc2
           nova:
             auth_section: keystone_authtoken
             auth_type: password
